test/grammar/schema/type_annotation/defaults/default_values_not_full_invalid_21/stderr.golden
error[E1001]: IllegalParameterError
 --> ${CWD}/main.k:1:15
  |
1 | schema A[a1 = 100, a2, a3 = "300"]:
  |               ^ non-default argument follows default argument
  |
note: A default argument